--- a/package.json
+++ b/package.json
@@ -4,15 +4,48 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
+    "@emotion/react": "^11.11.1",
+    "@nhost/nhost-js": "^2.2.17",
+    "@nhost/react": "^2.0.32",
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-community/checkbox": "^0.5.16",
+    "@react-native-seoul/masonry-list": "^1.4.2",
+    "@react-navigation/bottom-tabs": "^6.5.9",
+    "@react-navigation/native": "^6.1.8",
+    "@react-navigation/native-stack": "^6.9.14",
+    "@react-navigation/stack": "^6.3.18",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.8",
+    "@shopify/flash-list": "1.4.3",
+    "@types/react-native-vector-icons": "^6.4.15",
+    "axios": "^1.5.1",
     "expo": "~49.0.13",
+    "expo-checkbox": "~2.4.0",
+    "expo-crypto": "~12.4.1",
+    "expo-dev-client": "~2.4.11",
+    "expo-image-picker": "~14.3.2",
+    "expo-linear-gradient": "~12.3.0",
+    "expo-secure-store": "~12.3.1",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "graphql": "^15.8.0",
     "react": "18.2.0",
-    "react-native": "0.72.5"
+    "react-button": "^1.2.1",
+    "react-native": "^0.72.5",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-ionicons": "^4.6.5",
+    "react-native-modal": "^13.0.1",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "^3.25.0",
+    "react-native-vision-camera": "^3.3.1",
+    "styled-components": "^6.0.8",
+    "zustand": "^4.4.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
