Updated Mason List

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,12 @@
     "cSpell.words": [
         "gimpimrhxygihhtbpuof",
         "heartlike",
+        "Ionicons",
+        "Loginnow",
         "Nhost",
         "Signup",
+        "Storagetype",
+        "Texthold",
         "Tommorrow",
         "zustand"
     ]
