--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "@shopify/flash-list": "1.4.3",
+    "@tanstack/react-query": "^4.36.1",
     "@types/react-native-vector-icons": "^6.4.15",
     "axios": "^1.5.1",
     "expo": "~49.0.13",
