--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "cSpell.words": [
+        "bottmnav",
+        "Buttontext",
         "Camhas",
         "gimpimrhxygihhtbpuof",
         "heartlike",
@@ -7,6 +9,7 @@
         "Loginnow",
         "Nhost",
         "Signup",
+        "stacknavigation",
         "Storagetype",
         "Texthold",
         "Tommorrow",
