--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,11 +3,13 @@
         "bottmnav",
         "Buttontext",
         "Camhas",
+        "fffs",
         "gimpimrhxygihhtbpuof",
         "heartlike",
         "Ionicons",
         "Loginnow",
         "Nhost",
+        "Pressable",
         "Signup",
         "stacknavigation",
         "Storagetype",
