--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "^3.25.0",
     "react-native-vision-camera": "^3.3.1",
+    "react-query": "^3.39.3",
     "styled-components": "^6.0.8",
     "zustand": "^4.4.3"
   },
