--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "gimpimrhxygihhtbpuof",
         "heartlike",
         "Ionicons",
+        "kwivsrhgpywxqalkwedn",
         "Loginnow",
         "Nhost",
         "Pressable",
