--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,11 +3,18 @@
         "bottmnav",
         "Buttontext",
         "Camhas",
+        "Contextget",
+        "Contextis",
+        "Contextlogs",
         "fffs",
         "gimpimrhxygihhtbpuof",
+        "handlog",
         "heartlike",
         "Ionicons",
+        "isloading",
         "kwivsrhgpywxqalkwedn",
+        "Loggedin",
+        "Loggedout",
         "Loginnow",
         "Nhost",
         "Pressable",
@@ -16,6 +23,7 @@
         "Storagetype",
         "Texthold",
         "Tommorrow",
+        "Userhelper",
         "zustand"
     ]
 }
