--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "react-native-vision-camera": "^3.3.1",
     "react-query": "^3.39.3",
     "styled-components": "^6.0.8",
+    "tslib": "^2.6.2",
+    "zod": "^3.22.4",
     "zustand": "^4.4.3"
   },
   "devDependencies": {
