--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "graphql": "^15.8.0",
+    "lottie-react-native": "^6.3.1",
     "react": "18.2.0",
     "react-button": "^1.2.1",
     "react-native": "^0.72.5",
