--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,7 @@
         "Nhost",
         "Pressable",
         "Signup",
+        "Spash",
         "stacknavigation",
         "Storagetype",
         "Texthold",
