--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "expo-secure-store": "~12.3.1",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "form-data": "^4.0.0",
     "graphql": "^15.8.0",
     "lottie-react-native": "^6.3.1",
     "react": "18.2.0",
@@ -48,6 +49,8 @@
     "react-native-screens": "^3.25.0",
     "react-native-vision-camera": "^3.3.1",
     "react-query": "^3.39.3",
+    "regenerator-runtime": "^0.14.0",
+    "rn-fetch-blob": "^0.12.0",
     "styled-components": "^6.0.8",
     "tslib": "^2.6.2",
     "zod": "^3.22.4",
