--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "Contextget",
         "Contextis",
         "Contextlogs",
+        "dota",
         "fffs",
         "gimpimrhxygihhtbpuof",
         "handlog",
@@ -26,6 +27,7 @@
         "Storagetype",
         "Texthold",
         "Tommorrow",
+        "uploadresponse",
         "Userhelper",
         "userid",
         "zustand"
