--- a/package.json
+++ b/package.json
@@ -30,17 +30,21 @@
     "expo-checkbox": "~2.4.0",
     "expo-crypto": "~12.4.1",
     "expo-dev-client": "~2.4.11",
+    "expo-file-system": "~15.4.4",
     "expo-image-picker": "~14.3.2",
     "expo-linear-gradient": "~12.3.0",
     "expo-secure-store": "~12.3.1",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "form-data": "^4.0.0",
+    "formdata-node": "^5.0.1",
     "graphql": "^15.8.0",
     "lottie-react-native": "^6.3.1",
+    "node-fetch": "^3.3.2",
     "react": "18.2.0",
     "react-button": "^1.2.1",
     "react-native": "^0.72.5",
+    "react-native-blob-util": "^0.19.1",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-ionicons": "^4.6.5",
     "react-native-modal": "^13.0.1",
