Add Profile Details

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "bottmnav",
         "Buttontext",
         "Camhas",
+        "Checkuser",
         "Contextget",
         "Contextis",
         "Contextlogs",
