--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "Contextis",
         "Contextlogs",
         "dota",
+        "Feetch",
         "fffs",
         "gimpimrhxygihhtbpuof",
         "handlog",
