--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,7 @@
         "Loggedin",
         "Loggedout",
         "Loginnow",
+        "mainscreenhook",
         "Masonlist",
         "Nhost",
         "Pressable",
