--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "^3.25.0",
+    "react-native-toast-message": "^2.1.6",
     "react-native-vision-camera": "^3.3.1",
     "react-query": "^3.39.3",
     "regenerator-runtime": "^0.14.0",
