--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,10 +4,12 @@
         "Buttontext",
         "Camhas",
         "Checkuser",
+        "consts",
         "Contextget",
         "Contextis",
         "Contextlogs",
         "dota",
+        "fallbackurl",
         "Feetch",
         "fffs",
         "gimpimrhxygihhtbpuof",
@@ -16,6 +18,8 @@
         "Ionicons",
         "isloading",
         "kwivsrhgpywxqalkwedn",
+        "loadingdots",
+        "loadingdotsw",
         "Logg",
         "Loggedin",
         "Loggedout",
@@ -24,15 +28,18 @@
         "Masonlist",
         "Nhost",
         "Pressable",
+        "showpin",
         "Signup",
         "Spash",
         "stacknavigation",
         "Storagetype",
         "Texthold",
         "Tommorrow",
+        "topview",
         "uploadresponse",
         "Userhelper",
         "userid",
+        "welcomestyle",
         "zustand"
     ]
 }
