--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,10 +11,12 @@
         "dota",
         "fallbackurl",
         "Feetch",
+        "fetchuser",
         "fffs",
         "gimpimrhxygihhtbpuof",
         "handlog",
         "heartlike",
+        "imagefile",
         "Ionicons",
         "isloading",
         "kwivsrhgpywxqalkwedn",
@@ -27,7 +29,9 @@
         "mainscreenhook",
         "Masonlist",
         "Nhost",
+        "onback",
         "Pressable",
+        "PROFUSER",
         "showpin",
         "Signup",
         "Spash",
@@ -39,6 +43,7 @@
         "uploadresponse",
         "Userhelper",
         "userid",
+        "userprof",
         "welcomestyle",
         "zustand"
     ]
