--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,12 +13,16 @@
         "Feetch",
         "fetchuser",
         "fffs",
+        "Firebaseconfig",
+        "firestore",
         "gimpimrhxygihhtbpuof",
         "handlog",
         "heartlike",
         "imagefile",
         "Ionicons",
         "isloading",
+        "JANEDOE",
+        "JANEDONE",
         "kwivsrhgpywxqalkwedn",
         "loadingdots",
         "loadingdotsw",
@@ -30,13 +34,17 @@
         "Masonlist",
         "Nhost",
         "onback",
+        "Pinscreens",
         "Pressable",
         "PROFUSER",
+        "setfile",
         "showpin",
         "Signup",
         "Spash",
         "stacknavigation",
+        "storageref",
         "Storagetype",
+        "Tabnavigation",
         "Texthold",
         "Tommorrow",
         "topview",
