--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@nhost/nhost-js": "^2.2.17",
     "@nhost/react": "^2.0.32",
     "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-community/blur": "^4.3.2",
     "@react-native-community/checkbox": "^0.5.16",
     "@react-native-seoul/masonry-list": "^1.4.2",
     "@react-navigation/bottom-tabs": "^6.5.9",
+    "@react-navigation/material-top-tabs": "^6.6.5",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
     "@react-navigation/stack": "^6.3.18",
@@ -27,6 +29,7 @@
     "@types/react-native-vector-icons": "^6.4.15",
     "axios": "^1.5.1",
     "expo": "~49.0.13",
+    "expo-av": "~13.4.1",
     "expo-checkbox": "~2.4.0",
     "expo-crypto": "~12.4.1",
     "expo-dev-client": "~2.4.11",
@@ -36,6 +39,7 @@
     "expo-secure-store": "~12.3.1",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.5.0",
     "form-data": "^4.0.0",
     "formdata-node": "^5.0.1",
     "graphql": "^15.8.0",
@@ -48,9 +52,12 @@
     "react-native-gesture-handler": "~2.12.0",
     "react-native-ionicons": "^4.6.5",
     "react-native-modal": "^13.0.1",
+    "react-native-pager-view": "6.2.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "^3.25.0",
+    "react-native-svg": "13.9.0",
+    "react-native-tab-view": "^3.5.2",
     "react-native-toast-message": "^2.1.6",
     "react-native-vision-camera": "^3.3.1",
     "react-query": "^3.39.3",
