new Profile And Query

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,6 +26,7 @@
         "kwivsrhgpywxqalkwedn",
         "loadingdots",
         "loadingdotsw",
+        "LOGCHECK",
         "Logg",
         "Loggedin",
         "Loggedout",
@@ -35,8 +36,12 @@
         "Nhost",
         "onback",
         "Pinscreens",
+        "postpin",
         "Pressable",
+        "profpin",
         "PROFUSER",
+        "redner",
+        "Retrive",
         "setfile",
         "showpin",
         "Signup",
@@ -51,6 +56,7 @@
         "uploadresponse",
         "Userhelper",
         "userid",
+        "userpinprof",
         "userprof",
         "welcomestyle",
         "zustand"
