--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-button": "^1.2.1",
     "react-native": "^0.72.5",
     "react-native-blob-util": "^0.19.1",
+    "react-native-collapsible-tab-view": "^6.2.1",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-ionicons": "^4.6.5",
     "react-native-modal": "^13.0.1",
